--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ https://templatemo.com/tm-570-chain-app-dev
       <div class="row">
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading">
-            <h4>Soul Name <em>Rarity</em> & Fees</h4>
+            <h4>Domain Names <em>Rarity</em> & Fees</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
            
           </div>
