--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ https://templatemo.com/tm-570-chain-app-dev
               <li class="scroll-to-section"><a href="#mint">Mint</a></li>
               <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
             <!--  <li><div class="gradient-button"><a id="modal_trigger" href="./mint.html" target="_blank">Mint Now</a></div></li> -->
-            <li> <a href="https://twitter.com/arbiscanAIName" target="_blank"><img src="assets/images/twitter.png" width="36px" height="36px"></a><li>
+            <li> <a href="https://twitter.com/arbitrumainame" target="_blank"><img src="assets/images/twitter.png" width="36px" height="36px"></a><li>
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
